# trustmee-attester

./: .gitignore  Cargo.toml  README.md
src/: collateral.rs  lib.rs  main.rs
test_data/: README.md  sample_tee_pubkey.json  snp_verifier_component.signed.wasm  snp_verifier_component.wasm  snp_verifier_host_crypto_component.wasm  tdx_verifier_component.wasm
tests/: builders.rs
