[package]
name = "trustmee-attester"
version = "0.1.0"
edition = "2021"
description = "Standalone builder for TrustMee CMW and attestation-service REST payloads"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
reqwest = { version = "0.11", optional = true }
urlencoding = "2"

[features]
default = []
confidential-containers = ["dep:reqwest"]
