[package]
name = "trustmee-attester"
version = "0.1.0"
edition = "2021"
description = "Standalone builder for TrustMee CMW and attestation-service REST payloads"
license = "Apache-2.0"
readme = "README.md"

[features]
default = ["fetch-collateral"]
fetch-collateral = ["dep:reqwest"]

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12", features = ["blocking"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["base64"] }
sha2 = "0.10"
reqwest = { version = "0.11", optional = true }
thiserror = "2"

[features]
default = []
confidential-containers = ["dep:reqwest"]

